infra/user-srv.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user-container
        image: harikrishnanpnr/makeituser:latest

---
apiVersion: v1
kind: Service
metadata:
  name: user-srv
spec:
  selector:
    app: user
  ports:
    - name: user
      protocol: TCP
      port: 4000
      targetPort: 4000
