infra/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: user.com
      http:
        paths:
          - path: /api/test/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-srv
                port:
                  number: 4000
